<resources>
    <string name="app_name">Restervator</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="book_a_table"> Book a table </string>
    <string name="restaurantDto">Restaurant</string>
    <string name="extended_fab_content_desc">When this button is clicked, it is supposed to go to the activity where you book a table </string>
    <string name="full_image_of_a_restaurant">Full image of a restaurantDto</string>
    <string name="restaurant_city">Milan</string>
    <string name="restaurant_phone">0774293749</string>
    <string name="date">Select date</string>
    <string name="time">Select time</string>

    <string name="noon_12">12:00</string>
    <string name="noon_13">13:00</string>
    <string name="noon_14">14:00</string>
    <string name="noon_15">15:00</string>

    <string name="evening_18">18:00</string>
    <string name="evening_19">19:00</string>
    <string name="evening_20">20:00</string>
    <string name="evening_21">21:00 + </string>

    <string name="number_of_persons">Number of persons</string>
    <string name="num_of_persons_1_2">1-2</string>
    <string name="num_of_persons_3_4">3-4</string>
    <string name="num_of_persons_5_8">5-8</string>
    <string name="num_of_persons_9_above">9+</string>

    <string name="book_now">Book now</string>
    <string name="maininterface">MAININTERFACE</string>
    <string name="list_image_description">the image of the restaurantDto</string>
    <string name="restaurant_name">Name</string>
    <string name="restaurant_rating">0</string>
    <string name="restaurant_address">Address</string>
    <string name="location_permission_denied">Location permissions denied,
        please enable the permissions to use this app.
    </string>
    <string name="list_image">firstimage</string>
    <string name="more_information">More information</string>
    <string name="restaurant_avg_price"> </string>
    <string name="no_reservation">No Reservation</string>
    <string name="sort_by">Sort by</string>
    <string name="book_a_table">Book a table</string>

    <string-array name="sort_types">
        <item>Highest rating</item>
        <item>Closest distance</item>
        <item>Lowest price</item>
    </string-array>

</resources>
